fix the spacings

--- a/packages/components/src/LightBox/LightBox.module.css
+++ b/packages/components/src/LightBox/LightBox.module.css
@@ -23,8 +23,8 @@
   bottom: 0;
   left: 0;
   z-index: var(--elevation-modal);
-  height: 100%;
   max-width: 100%;
+  max-height: 100%;
   padding: var(--space-base) var(--space-larger);
   background-color: var(--color-base-grey--400);
   justify-content: center;
